# webhookops

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
ingest/: README.md  pyproject.toml
ingest/src/ingest/: __init__.py  config.py  db.py  main.py  security.py
ingest/tests/: conftest.py  test_main.py  test_security.py
management/: README.md  manage.py  pyproject.toml
management/src/management/: __init__.py
management/src/management/accounts/: apps.py  models.py
management/src/management/accounts/migrations/: 0001_initial.py
management/src/management/config/: asgi.py  settings.py  wsgi.py
management/src/management/webhooks/: apps.py  models.py
management/src/management/webhooks/migrations/: 0001_initial.py
shared/: README.md  pyproject.toml
shared/src/shared/: __init__.py  persistence.py
shared/tests/: conftest.py  test_persistence.py
