[project]
name = "ingest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.2",
    "pydantic-settings>=2.14.2",
    "shared",
    "uvicorn>=0.51.0",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest"]
